<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clrWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tvLoginTag"


                    android:layout_margin="@dimen/m_14dp"

                    android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/etCurrentPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/login_m8d"

                        android:layout_marginRight="@dimen/login_m8d"
                        android:layout_marginTop="@dimen/login_m2d"


                        android:hint="@string/strHntCurrentPassword"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        android:textSize="18dp"
                        app:met_baseColor="@color/clrEtHint"
                        app:met_floatingLabel="highlight"
                        app:met_hideUnderline="false"
                        app:met_primaryColor="@color/clrEtPrimaryLineText">

                        <requestFocus />
                    </com.rengwuxian.materialedittext.MaterialEditText>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_2d" />


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/etNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/login_m8d"


                        android:layout_marginRight="@dimen/login_m8d"
                        android:layout_marginTop="@dimen/login_m2d"


                        android:hint="@string/strHntNewPass"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        android:textSize="18dp"
                        app:met_baseColor="@color/clrEtHint"
                        app:met_floatingLabel="highlight"
                        app:met_hideUnderline="false"
                        app:met_primaryColor="@color/clrEtPrimaryLineText" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_2d"

                        />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/etConfPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/login_m8d"

                        android:layout_marginRight="@dimen/login_m8d"
                        android:layout_marginTop="@dimen/login_m2d"


                        android:hint="@string/strHntReTypePass"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        android:textSize="18dp"
                        app:met_baseColor="@color/clrEtHint"
                        app:met_floatingLabel="highlight"
                        app:met_hideUnderline="false"
                        app:met_primaryColor="@color/clrEtPrimaryLineText" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_2d"

                        />


                    <TextView
                        android:id="@+id/tvSubmit"
                        style="@style/App_BtnGreenTViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/h_btn_tv"

                        android:layout_marginBottom="@dimen/m_24dp"
                        android:layout_marginTop="@dimen/m_24dp"
                        android:gravity="center"
                        android:text="SUBMIT" />


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>